# alulapy

./: README.md  pyproject.toml
.github/workflows/: pypi.yaml
src/alulapy/: __init__.py  client.py  const.py  exceptions.py  models.py
tests/: test_client.py  test_exceptions.py  test_models.py
